--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,25 @@
 _build.*
+.sconsign.dblite
+config.log
+.sconf_temp
+*.o
+*.os
+*.so
+*.cfgc
+*.pyc
+*_wrap.cc
+*Lib.py
+doc/html
+doc/*.tag
+doc/*.inc
+doc/doxygen.conf
+tests/.tests
+version.py
+.eggs
+.pytest_cache
+*.egg-info
+DATA/
+bin/
+.coverage
+pytest_session.txt
+version.py
